WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311819
[GLIB][JSC] stress/iterator-prototype-includes.js tests are failing since added in
310769@main
https://bugs.webkit.org/show_bug.cgi?id=311819
Summary
[GLIB][JSC] stress/iterator-prototype-includes.js tests are failing since add...
Lauro Moura
Reported
2026-04-09 07:56:11 PDT
https://results.webkit.org/?suite=javascriptcore-tests&test=stress%2Fiterator-prototype-includes.js.default
List of failures: stress/iterator-prototype-includes.js.bytecode-cache stress/iterator-prototype-includes.js.default stress/iterator-prototype-includes.js.dfg-eager stress/iterator-prototype-includes.js.dfg-eager-no-cjit-validate stress/iterator-prototype-includes.js.eager-jettison-no-cjit stress/iterator-prototype-includes.js.ftl-eager stress/iterator-prototype-includes.js.ftl-eager-no-cjit stress/iterator-prototype-includes.js.ftl-eager-no-cjit-b3o1 stress/iterator-prototype-includes.js.ftl-no-cjit-b3o0 stress/iterator-prototype-includes.js.ftl-no-cjit-no-inline-validate stress/iterator-prototype-includes.js.ftl-no-cjit-no-put-stack-validate stress/iterator-prototype-includes.js.ftl-no-cjit-small-pool stress/iterator-prototype-includes.js.ftl-no-cjit-validate-sampling-profiler stress/iterator-prototype-includes.js.lockdown stress/iterator-prototype-includes.js.mini-mode stress/iterator-prototype-includes.js.no-cjit-collect-continuously stress/iterator-prototype-includes.js.no-cjit-validate-phases stress/iterator-prototype-includes.js.no-ftl stress/iterator-prototype-includes.js.no-llint Example output for some of them: stress/iterator-prototype-includes.js.lockdown: Exception: Error: call on short iterator with 2nd arg (large number): Number.MAX_VALUE: calling .includes(): Expected false but got true stress/iterator-prototype-includes.js.lockdown:
sameValue@iterator-prototype-includes.js
:5:24 stress/iterator-prototype-includes.js.lockdown: global
code@iterator-prototype-includes.js
:457:18 stress/iterator-prototype-includes.js.lockdown: ERROR: Unexpected exit code: 3 stress/iterator-prototype-includes.js.lockdown: Repro command: jsc --validateOptions=true --useFTLJIT=false --useFunctionDotArguments=true --validateExceptionChecks=true --useDollarVM=true --maxPerThreadStackUsage=1572864 --useJIT=false --useGenerationalGC=false --useConcurrentGC=false --useLLIntICs=false --use ZombieMode=true --allowDoubleShape=false --alwaysHaveABadTime=true --libpasForcePGMWithRate=14 --useIteratorIncludes=1 iterator-prototype-includes.js stress/iterator-prototype-includes.js.default: Exception: Error: call on short iterator with 2nd arg (large number): Number.MAX_VALUE: calling .includes(): Expected false but got true stress/iterator-prototype-includes.js.default:
sameValue@iterator-prototype-includes.js
:5:24 stress/iterator-prototype-includes.js.default: global
code@iterator-prototype-includes.js
:457:18 stress/iterator-prototype-includes.js.ftl-no-cjit-b3o0: Exception: Error: call on short iterator with 2nd arg (large number): Number.MAX_VALUE: calling .includes(): Expected false but got true stress/iterator-prototype-includes.js.ftl-no-cjit-b3o0:
sameValue@iterator-prototype-includes.js
:5:24 stress/iterator-prototype-includes.js.ftl-no-cjit-b3o0: global
code@iterator-prototype-includes.js
:457:18 stress/iterator-prototype-includes.js.no-llint: Exception: Error: call on short iterator with 2nd arg (large number): Number.MAX_VALUE: calling .includes(): Expected false but got true stress/iterator-prototype-includes.js.no-llint:
sameValue@iterator-prototype-includes.js
:5:24 stress/iterator-prototype-includes.js.no-llint: global
code@iterator-prototype-includes.js
:457:18 stress/iterator-prototype-includes.js.bytecode-cache: Exception: Error: call on short iterator with 2nd arg (large number): Number.MAX_VALUE: calling .includes(): Expected false but got true stress/iterator-prototype-includes.js.bytecode-cache:
sameValue@iterator-prototype-includes.js
:5:24 stress/iterator-prototype-includes.js.bytecode-cache: global
code@iterator-prototype-includes.js
:457:18 stress/iterator-prototype-includes.js.bytecode-cache: Command '../../.vm/JavaScriptCore.framework/Helpers/jsc iterator-prototype-includes.js --validateOptions=true --useFTLJIT=false --useFunctionDotArguments=true --validateExceptionChecks=true --useDollarVM=true --maxPerThreadStackUsage=1572864 --validateOptions =true --useFTLJIT=true --useIteratorIncludes=1' failed
Attachments
Add attachment
proposed patch, testcase, etc.
Justin Michaud
Comment 1
2026-04-10 11:41:01 PDT
This is gcc-only
Justin Michaud
Comment 2
2026-04-10 13:57:56 PDT
toSkip = static_cast<uint64_t>(skippedAsDouble); appears to be UB
Justin Michaud
Comment 3
2026-04-10 21:27:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62511
EWS
Comment 4
2026-04-17 06:39:28 PDT
Committed
311446@main
(30298eb4df3c): <
https://commits.webkit.org/311446@main
> Reviewed commits have been landed. Closing PR #62511 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2026-04-17 06:40:14 PDT
<
rdar://problem/175005735
>
Tetsuharu Ohzeki [UTC+9]
Comment 6
2026-04-17 08:31:41 PDT
***
Bug 312464
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug