[GLIB][JSC] stress/iterator-prototype-includes.js tests are failing since added in 310769@main https://bugs.webkit.org/show_bug.cgi?id=311819

Reviewed by Keith Miller and Yusuke Suzuki.

Casting Number.MAX_VALUE to uint64_t is UB, and acts strangely on gcc causing some
test failures.

Canonical link: https://commits.webkit.org/311446@main